--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "dns": "^0.2.2",
+    "koa": "^2.6.2",
+    "module": "^1.2.5",
+    "mongodb": "^2.2.36",
+    "require-optional": "^0.4.0",
+    "spectre.css": "^0.5.7",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -26,8 +32,11 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.27.1"
   },
   "eslintConfig": {
     "root": true,
